<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLight"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:theme="@style/FullscreenNoTitleTheme"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="60dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Login progress -->
            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="gone" />

            <RelativeLayout
                android:id="@+id/login_window"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:background="@drawable/relative_layout">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/userIconView"
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:baselineAligned="false"
                        android:padding="10dp"
                        android:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/white"
                        android:textSize="22sp" />


                </LinearLayout>

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="255dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="23dp"
                    android:layout_marginLeft="23dp"
                    android:layout_marginTop="110dp"
                    android:ems="10"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="259dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="23dp"
                    android:layout_marginLeft="23dp"
                    android:layout_marginTop="180dp"
                    android:ems="8"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/registerbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="33dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginBottom="77dp"
                    android:background="@drawable/button_round_small"
                    android:bottomLeftRadius="15dp"
                    android:bottomRightRadius="7dp"
                    android:text="Register"
                    android:textColor="@color/white"
                    android:topLeftRadius="7dp"
                    android:topRightRadius="7dp" />

                <Button
                    android:id="@+id/sign_in_action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/registerbutton"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="40dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/button_round_small_light"
                    android:text="@string/action_sign_in_short"
                    android:textColor="@color/grey" />

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="35dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginBottom="10dp"
                    android:clickable="true"
                    android:text="@string/action_forget_password" />

            </RelativeLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>